<resources>
    <string name="app_name">ManonParle</string>

    <string name="common_left">gauche</string>
    <string name="common_right">droite</string>
    <string name="common_neutral">neutre</string>
    <string name="common_select">choisir</string>
    <string name="common_cancel">annuler</string>
    <string name="common_warn">attention</string>
    <string name="common_pictos">pictogrammes</string>
    <string name="common_groups">groupes</string>
    <string name="common_links">liens</string>
    <string name="common_fast">rapide</string>
    <string name="common_slow">lent</string>

    <string name="form_group_title">Edition du groupe</string>

    <string name="form_picto_name">Nom du pictogramme</string>
    <string name="form_picto_synth">Synthèse vocal</string>
    <string name="form_picto_rec">Enregistrement vocal</string>
    <string name="form_picto_select_group">Groupes du pictogramme</string>
    <string name="form_picto_not_complete">Le formulaire n\'est pas complet</string>

    <string name="import_package_waiting_tts">Initialisation du module de syntèse vocale</string>
    <string name="import_package_tts_offline">Impossible de démarrer le module de syntèse vocale. <br />Voulez vous quand même importer le package</string>
    <string name="import_package_import_complete">L\'import du package est terminé</string>
    <string name="import_package_report_picto">Elements importés : %1$d/%2$d</string>
    <string name="import_package_report_group">Groups importés : %1$d/%2$d</string>
    <string name="import_package_report_links">Liens créés : %1$d/%2$d</string>
    <string name="import_package_report_live_picto">Elements importés</string>
    <string name="import_package_report_live_group">Groups importés</string>
    <string name="import_package_report_live_links">Liens créés</string>

    <string name="loader_title">Loader</string>
    <string name="loader_first_run">C\'est la première fois que vous lancez l\'application.<br />Voulez vous importer le package d\'image de base</string>

    <string name="manage_pictos_title">Gestion des pictogrammes</string>

    <string name="manage_packages_nb_groups">Nombre de groupes: %1$d</string>
    <string name="manage_packages_nb_pictos">Nombre de pictogrames: %1$d</string>
    <string name="manage_packages_version">Version de l\'archive: %1$s</string>
    <string name="manage_packages_size">Taille: %1$s</string>
    <string name="manage_packages_repo">"Repo d'origine: %1$s"</string>

    <string name="select_group_title">Sélection d\'un groupe</string>
    <string name="select_group_menu_picto">Gérer les pictogrammes</string>
    <string name="select_group_menu_settings">Paramètres</string>
    <string name="select_group_package_manager">Gérer les paquets</string>

    <string name="select_pictos_title">Sélection de 2 pictogrammes</string>
    <string name="select_pictos_present">Présenter</string>
    <string name="select_pictos_choice">Choisissez les images à présenter</string>
    <string name="select_pictos_toast_please_select">Il faut selectionner 2 images</string>

    <string name="settings_title">Paramétrage de l\'application</string>
    <string name="settings_skew_text">Renfort des doigts de la main à</string>
    <string name="settings_confirm_color_text">Couleur de la confirmation visuel</string>
    <string name="settings_confirm_color_invite">Taper pour éditer</string>
    <string name="settings_confirm_speed_text">Vitesse de la confirmation visuelle</string>

</resources>
