<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/baseOverlay"
        android:layout_margin="2dp">

        <ImageView
            android:id="@+id/package_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="package name"
                android:textColor="@color/colorBaseText"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nb_pictos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manage_packages_nb_pictos"
                    android:textColor="@color/colorBaseText" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"/>

                <TextView
                    android:id="@+id/nb_groups"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manage_packages_nb_groups"
                    android:textColor="@color/colorBaseText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manage_packages_version"
                    android:textColor="@color/colorBaseText" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"/>

                <TextView
                    android:id="@+id/size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manage_packages_size"
                    android:textColor="@color/colorBaseText" />
            </LinearLayout>

            <TextView
                android:id="@+id/repo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manage_packages_repo"
                android:textColor="@color/colorBaseText" />

        </LinearLayout>
    </LinearLayout>
</merge>